2006-07-31	Benedikt Meurer <benny@xfce.org>

	* thunar-archive-plugin/tap-provider.c(tap_provider_get_file_actions):
	  Provide actions only for local files.

2006-07-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-07-04	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.0 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Add missing translator credits.
	* scripts/template.tap, scripts/Makefile.am: Add template.tap to act
	  as a template for new .tap files.
	* po/*.po: Update project version.

2006-07-02	Benedikt Meurer <benny@xfce.org>

	* scripts/*.tap: Handle filenames with spaces properly.

2006-07-02	Benedikt Meurer <benny@xfce.org>

	* thunar-archive-plugin/tap-provider.c(TAP_MIME_TYPES): That should
	  have been 24 bytes, forgot the nul-byte.

2006-07-02	Benedikt Meurer <benny@xfce.org>

	* thunar-archive-plugin/tap-provider.c(TAP_MIME_TYPES): Avoid 21
	  unneccesary relocations.
	* thunar-archive-plugin/tap-provider.c: GTK+ 2.9.0 and above provides
	  an icon-name property for GtkActions, so we don't need the icon
	  factory there.

2006-07-01	Benedikt Meurer <benny@xfce.org>

	* thunar-archive-plugin/: Add support for other archive managers than
	  file-roller, using the mime database and an additional .tap wrapper
	  script.
	* configure.in.in, icons/, thunar-archive-plugin/tap-provider.c,
	  Makefile.am: Add icons for the extract and create actions, from
	  the file-roller user interface.
	* configure.in.in, scripts/, Makefile.am: Add wrapper scripts for
	  file-roller and ark; xarchiver should ship the wrapper script as
	  part of its distribution.
	* README: Add documentation about the new framework.
	* po/POTFILES.in: Add tap-backend.c here.
	* po/*.po, po/thunar-archive-plugin.pot: Merge new strings.
	* po/de.po: Update german translations.

2006-06-19	Benedikt Meurer <benny@xfce.org>

	* COPYING: This should be LGPL, as pointed out by Yves-Alexis
	  Perez <corsac@corsac.net>.
