@@ -6,10 +6,6 @@ SUBDIRS =								\
 	scripts								\
 	thunar-archive-plugin
 
-AUTOMAKE_OPTIONS =							\
-	1.8								\
-	dist-bzip2
-
 distclean-local:
 	rm -rf *.spec *.cache *~
 
